# render-engine

./: .gitignore  CMakeLists.txt  Dockerfile  FleetPrepare.sh  MacOSRun.sh  README.md  main.c
Source/: array.c  array.h  camera.c  camera.h  clipping.c  clipping.h  display.c  display.h  light.c  light.h  main.c  matrix.c  matrix.h  mesh.c  mesh.h  swap.c  swap.h  texture.c  texture.h  triangle.c  triangle.h  vector.c  vector.h
